--- a/public/assets/css/burger_styles.scss
+++ b/public/assets/css/burger_styles.scss
@@ -68,7 +68,13 @@ header {
     @include flex(column, space-around);
     margin: 18px 10px 0;
     div {
+        // border: 1px solid black;
         margin: 8px;
+        h4 {
+            font-weight: lighter;
+            margin: 10px auto;
+            text-align: center;
+        }
         ul {
             li {
                 @include flex(row, space-between);
@@ -89,6 +95,20 @@ header {
                     background-image: linear-gradient($brightOrange, $bloodOrange);
                 }
             }
+        }
+    }
+    #devoured-container {
+        // border: 1px solid black;
+        margin: 8px;
+        ul {
+            li {
+                p {
+                    background-color: $brightOrange;
+                    color: white;
+                    width: 100%;
+                }  
+            }
+            
         }
     }
 }
@@ -134,6 +154,7 @@ form {
         }
     }
     #burger-container {
+        @include flex(row, space-around);
         margin-top: 16px;
         div {
             width: 50%;
@@ -177,11 +198,14 @@ form {
         }
     }
     #burger-container {
-        margin-top: 40px;
-        padding: 0 40px;
+        margin-top: 20px;
+        padding: 0 25px;
         @include flex(row, space-around);
         div {
             margin: 8px;
+            h4 {
+                font-size: 1.2em;
+            }
             ul {
                 li {
                     p, 
@@ -190,7 +214,7 @@ form {
                         margin: 8px;
                     }
                     p {
-                        width: 70%;
+                        width: 68%;
                     }
                 }
             }
@@ -226,6 +250,9 @@ form {
         div {
             margin: 10px;
             width: 50%;
+            h4 {
+                font-size: 1.4em;
+            }
             ul {
                 padding: 10px;
                 li {
