--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,8 +34,9 @@
                 {{#if devoured}}
                 <li>
                     <p>
-                        <span>{{id}}. {{burger_name}}</span>
+                        <span>{{id}}</span><span>. {{burger_name}}</span>
                     </p>
+                    <i class='delete-btn fas fa-times fa-lg'></i>
                 </li>
                 {{/if}}
             {{/each}}
